# termcontrol

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: tests.yml
cmake/: termcontrol-config.cmake.in
include/termcontrol/: termcontrol.hpp
include/termcontrol/detail/: ascii.hpp  color.hpp  concepts.hpp  control_sequence.hpp  control_sequence_definition.hpp  definitions.hpp  display_width.hpp  fmt.hpp  format.hpp  parameters.hpp  parse.hpp  terminal_size.hpp  text_style.hpp  windows.hpp
tests/: CMakeLists.txt  test_color.cpp  test_concepts.cpp  test_control_sequence.cpp  test_parse.cpp  test_windows.cpp
